# system-design

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yaml
1/: workspace.dsl
2/userver-projects/: Dockerfile  README.md  docker-compose.yml
4/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  schema_design.md  validation.js
4/config/: config.yaml
4/scripts/mongodb/: data.js  init.js  queries.js
4/src/: main.cpp
4/src/handlers/auth/login/: handler.cpp  handler.hpp
4/src/handlers/properties/delete/: handler.hpp
4/src/handlers/properties/put/: handler.hpp
4/src/handlers/users/me/: handler.cpp
4/src/handlers/viewings/get/: handler.hpp
4/src/handlers/viewings/put/: handler.hpp
config/: config.yaml
pillow-postgres/: openapi.yaml
pillow-postgres/sql/: 02_data.sql
pillow-postgres/src/handlers/properties/delete/: handler.cpp
pillow-postgres/src/handlers/properties/post/: handler.cpp
pillow-postgres/src/handlers/properties/put/: handler.cpp
pillow-postgres/src/handlers/viewings/delete/: handler.cpp
sql/: 01_schema.sql  03_queries.sql
src/: main.cpp
src/handlers/auth/register/: handler.cpp  handler.hpp
src/handlers/properties/get/: handler.cpp  handler.hpp
src/handlers/properties/get_list/: handler.cpp  handler.hpp
src/handlers/properties/post/: handler.hpp
src/handlers/users/me/: handler.hpp
src/handlers/viewings/delete/: handler.hpp
src/handlers/viewings/get/: handler.cpp
src/handlers/viewings/post/: handler.hpp
src/handlers/viewings/put/: handler.cpp
(+3 files in other folders)
